# decision-engine

./: README.md  docker-compose.yaml
backend/: .gitignore  docker-compose.yaml
backend/ConfigBackend/: .env  Dockerfile  README.md  pyproject.toml  requests.json  requirements.txt
backend/ConfigBackend/migration/: env.py
backend/ConfigBackend/migration/versions/: 6927d9711122_initial_migration.py
backend/ConfigBackend/scripts/: init_db.sh
backend/ConfigBackend/src/: app.py  database.py  exceptions.py  repository.py  seed.py
backend/ConfigBackend/src/domains/blocks/: repository.py  schemas.py  utils.py
backend/ConfigBackend/src/domains/policies/: models.py  repository.py  router.py  schemas.py  services.py  utils.py  validations.py
backend/ConfigBackend/src/utils/: string_utils.py
backend/ConfigBackend/tests/: test_app.py  test_flow_dag_validation.py  test_flow_decision.py  test_policy_validation.py
frontend/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/Blocks/: index.tsx
frontend/src/components/Blocks/BlockWrapper/: index.tsx
frontend/src/components/Edges/: index.tsx  utils.tsx
frontend/src/components/Home/: index.tsx
frontend/src/components/Sidebar/: index.tsx
frontend/src/components/Toolbar/: index.tsx
frontend/src/components/ui/: form.tsx  menubar.tsx  navigation-menu.tsx  select.tsx
frontend/src/config/: apiConfig.ts
frontend/src/pages/: routes.tsx
frontend/src/pages/Decision/: index.tsx
frontend/src/pages/Policies/: index.tsx
frontend/src/pages/PolicyFlow/: index.tsx
frontend/src/protocols/: policy.ts
frontend/src/services/: Api.ts  Error.ts  Policy.ts
frontend/src/utils/: policy.ts
(+4 files in other folders)
