[project]
name = "configbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.11",
    "isort>=6.0.1",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.39",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
run = "fastapi dev ./src/app.py"
lint = 'ruff check'
format = 'ruff format'
pre_test = 'task format'
test = 'pytest -s -x -vv'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = '-p no:warnings'
